fix: use ObjectProvider<RingManager> to resolve circular auto-config dependency
HotKeyRedisAutoConfiguration.hotKeyCache() took RingManager as direct injection,
but RingManager is defined in HotKeyAmqpAutoConfiguration (processed later in
AutoConfiguration.imports order). When HotKeyCache creation failed,
ObjectProvider.getIfAvailable() silently returned null in HotKeyFacadeAutoConfiguration,
causing UnsupportedOperationException on all cache operations.

Also fixed:
- Raw mock(ObjectProvider.class) type inference error in test (Java 26 --release 17)
- RuleMatcherTest varargs warning for List.of((Rule) null)

Signed-off-by: Hyshmily <cxm8607@outlook.com>